<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="drawer_open">SMS</string>
	<string name="drawer_close">Contacts</string>
	<string name="add_publickey">add</string>
	<string name="my_publickey">查看公钥</string>
	<string name="copy">复制</string>
	<string name="add_phonenumber">输入手机号</string>
	<string name="add_key">输入公钥</string>
	<string name="add">添加</string>
	<string name="mykey">我的公钥</string>
	<string name="phonenumber">手机号</string>
	<string name="publickey">公钥</string>
	
	<color name="black">#000000</color>
	<color name="white">#ffffff</color>
	<color name="floralwhite">#fffaf0</color><!--花白色 -->
	<color name="navajowhite">#ffdead</color><!--纳瓦白 --> 
	<color name="antiquewhite">#faebd7</color><!--古董白 --> 
	<color name="whitesmoke">#f5f5f5</color><!--烟白色 --> 
</resources>
