<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/phonenumber"/>
    
    <EditText android:id="@+id/add_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/add_phonenumber"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    
     <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/publickey"/>
     
    <EditText android:id="@+id/add_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/add_key"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <Button android:id="@+id/btn_add"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:text="@string/add"
        android:layout_marginTop="20dp"/>

</LinearLayout>
